# hudl-project-submission

./: README.md
Automation/: .env  Makefile  README.md  pyproject.toml
Automation/features/: login.feature
Automation/page_objects/LoginPage/: login.py
Automation/tests/: conftest.py  test_login.py
Automation/util/: update_configs.py
